--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "url": "https://github.com/thelinmichael/spotify-web-api-node.git"
   },
   "dependencies": {
-    "superagent": "^2.0.0"
+    "superagent": "^2.0.0",
+    "express": "~4.0.0",
+    "querystring": "~0.2.0",
+    "request": "~2.34.0"
   },
   "config": {
     "blanket": {
